<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/f1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <include layout="@layout/tittle_view3" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:text="@string/password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/textView1"
        android:hint=""
        android:ems="10" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editText1"
        android:ems="10"
        android:inputType="textPassword" />
    
    <FrameLayout
        android:id="@+id/foot_weibo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_alignParentBottom="true">
       
        <include layout="@layout/foot_weibo2" />
    </FrameLayout>

    <Button
        android:id="@+id/button1"
        style="@style/button_text"
        android:layout_width="180dp"
    
        android:layout_alignRight="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="41dp"
        android:text="@string/register"
        android:textSize="21sp" />

    <Button
        android:id="@+id/button2"
        style="@style/button_text"
        android:layout_width="180dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignTop="@+id/button1"
        android:text="@string/login"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/f1"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="223dp"
        android:text="@string/username"
        android:textSize="25sp" />

</RelativeLayout>